# senda-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  PLUGINS.md  PLUGINS_PLAN.md  Package.swift  README.md  RELEASE.md  ROADMAP.md  benchmark.md  install.sh  spec.md
ci/: ci.md  (+1 more)
closedmesh/: Cargo.toml  README.md  TODO.md  build.rs  test-mesh.sh
closedmesh-client/: Cargo.toml
closedmesh-client/src/: events.rs  lib.rs
closedmesh-client/src/client/: builder.rs  mod.rs
closedmesh-client/src/crypto/: envelope.rs  keys.rs  mod.rs
closedmesh-client/src/inference/: moe.rs
closedmesh-client/src/models/: catalog.json  catalog.rs  gguf.rs  mod.rs
closedmesh-client/src/network/: affinity.rs  nostr.rs  rewrite.rs  transport.rs  transport_iroh.rs  tunnel.rs
closedmesh-client/src/protocol/: mod.rs  v0.rs
closedmesh-client/tests/: cancel_idempotent.rs  election_extraction.rs  events.rs  http_parse_test.rs  key_provider.rs  mesh_client_api.rs  mesh_types.rs  models_extraction.rs  network_affinity_extraction.rs  network_router_extraction.rs  nostr_discovery.rs  protocol_wire.rs  public_api.rs  reconnect_manual.rs
closedmesh/benchmarks/: membench-fingerprint-intel.cpp  membench-fingerprint.cu
closedmesh/docs/: DESIGN.md  EMBEDDED_CLIENT_ADR.md  IDENTITY_INCIDENT_RESPONSE.md  LLAMA_CPP_FORK.md  LLAMA_STAGE_INTEGRATION_PLAN.md  METRICS.md  MODEL_ROUTER.md  MOE_ISLANDS.md  MOE_STRATEGY_BENCHMARKS.md  MULTI_MODAL.md  MoE_DEPLOY_DESIGN.md  MoE_PLAN.md  MoE_SPLIT_REPORT.md  NODE_OWNER_IDENTITY.md  PREFIX_AFFINITY_BENCHMARKS.md  ROUTER_BENCHMARKS.md  ROUTER_V2.md  TESTING.md  VIRTUAL_LLM.md  message_protocol.md
closedmesh/plugin/: Cargo.toml
closedmesh/plugin/src/: error.rs  io.rs  lib.rs  manifest.rs
closedmesh/proto/: node.proto
closedmesh/skills/blackboard/: SKILL.md
closedmesh/src/: lib.rs  main.rs
closedmesh/src/api/: assets.rs  mod.rs  state.rs  status.rs
closedmesh/src/api/routes/: mesh_hook.rs  mod.rs  model_interests.rs  runtime.rs  search.rs
closedmesh/src/cli/: benchmark.rs  mod.rs  models.rs  moe.rs  pager.rs  runtime.rs  terminal_progress.rs
closedmesh/src/cli/commands/: auth.rs  benchmark.rs  blackboard.rs  discover.rs  download.rs  gpus.rs  integrations.rs  plugin.rs  runtime.rs  service.rs
closedmesh/src/cli/commands/models/: formatters.rs  formatters_console.rs  formatters_json.rs  mod.rs
closedmesh/src/cli/commands/moe/: formatters_json.rs  hf_job_wrapper.sh  hf_jobs.rs  mod.rs
closedmesh/src/cli/output/: EVENTS.md  mod.rs
closedmesh/src/crypto/: error.rs  keychain.rs  keys.rs  keystore.rs  mod.rs  ownership.rs
closedmesh/src/inference/: election.rs  keepwarm.rs  launch.rs  loading_watchdog.rs  mod.rs  moe.rs  native_baseline.rs  perf_profile.rs  reference_batteries.json  reference_fingerprints.json  verify.rs  virtual_llm.rs
closedmesh/src/mesh/: gossip.rs  heartbeat.rs  mod.rs  public_identity_tests.rs  tests.rs  visibility.rs
closedmesh/src/models/: catalog.rs  delete.rs  delete_tests.rs  gguf.rs  inventory.rs  local.rs  maintenance.rs  mod.rs  search.rs  topology.rs  usage.rs
closedmesh/src/models/resolve/: mod.rs  tests.rs
closedmesh/src/models/testdata/: unsloth_gemma_4_31b_it_gguf.live.json
closedmesh/src/network/: affinity.rs  metrics.rs  mod.rs  nostr.rs  router.rs  rpc_probe.rs  serving_tally.rs  tunnel.rs
closedmesh/src/network/openai/: backend.rs  ingress.rs  response_adapter.rs  transport.rs
closedmesh/src/plugin/: config.rs  mcp.rs  mod.rs  runtime.rs  transport.rs
closedmesh/src/plugins/: mod.rs
closedmesh/src/plugins/blackboard/: mcp.rs  mod.rs
closedmesh/src/plugins/blobstore/: mod.rs
closedmesh/src/plugins/openai_endpoint/: mod.rs
closedmesh/src/protocol/: convert.rs  mod.rs
closedmesh/src/runtime/: config_state.rs  discovery.rs  instance.rs  interactive.rs  local.rs  mod.rs
closedmesh/src/runtime/proxy/: tests.rs
closedmesh/src/system/: autoupdate.rs  benchmark.rs  benchmark_prompts.rs  hardware.rs  mod.rs  moe_benchmark.rs  moe_planner.rs  release_target.rs
closedmesh/tests/: protocol_compat_v0_client.rs  test_blackboard.sh  test_reasoning_compat.sh  virtual_llm_injection.rs
closedmesh/tests/fixtures/: pre-tops-fingerprint.json  release-target-matrix.json
closedmesh/ui/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
closedmesh/ui/public/: manifest.json
closedmesh/ui/src/: App.tsx  index.css  main.tsx
closedmesh/ui/src/components/: mesh-llm-wordmark.tsx
closedmesh/ui/src/components/ui/: dialog.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
closedmesh/ui/src/features/app-shell/components/: AppHeader.test.tsx  AppHeader.tsx
closedmesh/ui/src/features/app-shell/components/command-bar/: CommandBarModal.test.tsx  CommandBarModal.tsx  CommandBarProvider.test.tsx  command-bar-helpers.test.ts  command-bar-helpers.ts  command-bar-types.ts  useCommandBar.ts
closedmesh/ui/src/features/app-shell/lib/: routes.test.ts  status-helpers.test.ts  status-types.test.ts
closedmesh/ui/src/features/app-shell/playground/components/: PlaygroundBaseUI.tsx  PlaygroundCards.tsx
closedmesh/ui/src/features/chat/components/: ChatPage.tsx
closedmesh/ui/src/features/chat/components/composer/: ChatComposer.tsx
closedmesh/ui/src/features/chat/components/messages/: ChatBubble.tsx  KaTeXBlock.tsx  MermaidBlock.tsx
closedmesh/ui/src/features/chat/hooks/: useChatSession.ts
closedmesh/ui/src/features/chat/lib/: chat-attachments.test.ts  chat-id.ts  chat-storage.ts  chat-types.ts  message-content.ts  vision-describe.ts
closedmesh/ui/src/features/dashboard/components/: DashboardPage.tsx
closedmesh/ui/src/lib/: attachments.test.ts  attachments.ts  format-duration.ts  image-describe.ts  pdf.ts
closedmesh/ui/src/test/: setup.ts
mesh-api/: Cargo.toml
(+399 files in other folders)
