[package]
name = "closedmesh-client"
version = "0.66.15-pre1"
edition = "2021"
description = "Low-level Rust client implementation for Mesh LLM embedded integrations"
license = "Apache-2.0"
repository = "https://github.com/closedmesh/closedmesh-llm"
homepage = "https://github.com/closedmesh/closedmesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "quic", "inference", "client"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "mesh_client"

[features]
host-io = []

[dependencies]
# Allowlist enforced by embedded-client-purity CI (Wave 1C)
# Only add deps from: iroh, tokio, prost, bytes, rustls, quinn, serde, serde_json,
# thiserror, anyhow, tracing, sha2, ed25519-dalek, hex, uuid, url, http, base64,
# async-trait, httparse (httparse is a transitive dep of iroh; not in forbidden list)
iroh = "0.98"
async-trait = "0.1"
httparse = "1"
tokio = { version = "1", features = ["io-util", "sync", "net", "time", "rt-multi-thread"] }
prost = "0.14"
bytes = "1"
anyhow = "1"
nostr-sdk = { version = "0.44.1", default-features = false }
rustls = "0.23"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "=3.0.0-pre.6", features = ["rand_core"] }
crypto_box = "0.9"
rand = "0.10"

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
