[package]
name = "mesh-api"
version = "0.66.15-pre1"
edition = "2021"
description = "Public Rust SDK for embedding Mesh LLM clients in applications"
license = "Apache-2.0"
repository = "https://github.com/closedmesh/closedmesh-llm"
homepage = "https://github.com/closedmesh/closedmesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "client"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-client/host-io"]

[dependencies]
mesh-client = { package = "closedmesh-client", version = "0.66.15-pre1", path = "../closedmesh-client" }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
