[package]
name = "mesh-api"
version = "0.66.79"
edition = "2021"
description = "Public Rust SDK for embedding Mesh LLM clients in applications"
license = "Apache-2.0"
repository = "https://github.com/senda-network/senda-llm"
homepage = "https://github.com/senda-network/senda-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "client"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-client/host-io"]

[dependencies]
mesh-client = { package = "senda-client", version = "0.66.79", path = "../senda-client" }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
